--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
   },
   "homepage": "https://github.com/papandreou/unexpected-express",
   "devDependencies": {
-    "bufferedstream": "^1.6.0"
+    "bufferedstream": "=1.6.0",
+    "express": "=4.1.1",
+    "unexpected": "=3.1.6"
   },
   "dependencies": {
-    "underscore": "^1.6.0"
+    "underscore": "=1.6.0"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
