--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "body-parser": "=1.0.2",
     "bufferedstream": "=1.6.0",
     "express": "=4.1.1",
+    "form-data": "=0.1.2",
+    "passerror": "=1.0.1",
     "unexpected": "=3.1.6"
   },
   "dependencies": {
