Gear up on Travis, Istanbul, jshint, Coveralls, and README badges.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Extend the unexpected assertion library with support for testing Express middleware",
   "main": "lib/unexpectedExpress.js",
   "scripts": {
-    "test": "mocha"
+    "lint": "jshint .",
+    "test": "npm run lint && mocha",
+    "travis": "npm test && npm run coverage && <coverage/lcov.info coveralls",
+    "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot"
   },
   "repository": {
     "type": "git",
@@ -26,13 +29,17 @@
   "homepage": "https://github.com/papandreou/unexpected-express",
   "devDependencies": {
     "body-parser": "=1.0.2",
+    "coveralls": "^2.11.1",
     "express": "=4.1.1",
     "form-data": "=0.1.2",
+    "istanbul": "^0.3.0",
+    "jshint": "^2.5.2",
     "passerror": "=1.0.1",
     "unexpected": "=4.0.5"
   },
   "dependencies": {
     "bufferedstream": "=1.6.0",
+    "jshint": "^2.5.2",
     "underscore": "=1.6.0"
   }
 }
