--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   "homepage": "https://github.com/papandreou/unexpected-express",
   "devDependencies": {
     "body-parser": "=1.0.2",
-    "coveralls": "^2.11.1",
+    "coveralls": "=2.11.1",
     "express": "=4.1.1",
     "form-data": "=0.1.2",
-    "istanbul": "^0.3.0",
-    "jshint": "^2.5.2",
+    "istanbul": "=0.3.0",
+    "jshint": "=2.5.2",
+    "mocha": "=1.21.4",
     "passerror": "=1.0.1",
     "unexpected": "=4.0.5"
   },
