--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "dependencies": {
     "bufferedstream": "=1.6.0",
-    "jshint": "^2.5.2",
+    "jshint": "=2.5.2",
+    "messy": "=0.2.1",
     "underscore": "=1.6.0"
   }
 }
