--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "form-data": "=0.1.2",
     "istanbul": "=0.3.0",
     "jshint": "=2.5.2",
+    "magicpen-prism": "=0.1.2",
     "mocha": "=1.21.4",
     "passerror": "=1.0.1",
     "unexpected": "=4.1.4"
