--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "magicpen-prism": "=0.2.0",
     "mocha": "=1.21.4",
     "passerror": "=1.0.1",
-    "unexpected": "~5.0"
+    "unexpected": "=5.0.0-beta1"
   },
   "dependencies": {
     "bufferedstream": "=1.6.0",
