Fixed failing test, updated unexpected-messy to 1.1.0.

--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
   "dependencies": {
     "bufferedstream": "=1.6.0",
     "jshint": "=2.5.2",
-    "messy": "=1.2.2",
+    "messy": "1.2.2",
     "underscore": "=1.6.0",
-    "unexpected-messy": "=1.0.1"
+    "unexpected-messy": "1.1.0"
   }
 }
