--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "homepage": "https://github.com/papandreou/unexpected-express",
   "peerDependencies": {
-    "unexpected": ">=5.0.0-beta14",
+    "unexpected": ">=5.0.0-beta35",
+    "unexpected-messy": ">= 2.4.0",
     "express": "*"
   },
   "devDependencies": {
@@ -41,12 +42,12 @@
     "magicpen-prism": "0.2.0",
     "mocha": "2.0.1",
     "passerror": "1.0.1",
-    "unexpected": "5.0.0-beta31"
+    "unexpected": "5.0.0-beta35",
+    "unexpected-messy": "2.4.0"
   },
   "dependencies": {
     "bufferedstream": "1.6.0",
     "messy": "3.1.3",
-    "underscore": "1.6.0",
-    "unexpected-messy": "2.3.1"
+    "underscore": "1.6.0"
   }
 }
