--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   },
   "homepage": "https://github.com/papandreou/unexpected-express",
   "peerDependencies": {
-    "unexpected": ">=5.0.0-beta35",
-    "unexpected-messy": ">= 2.4.0",
+    "unexpected": "5",
+    "unexpected-messy": ">= 2.4.1",
     "express": "*"
   },
   "devDependencies": {
@@ -39,11 +39,12 @@
     "form-data": "0.1.2",
     "istanbul": "0.3.0",
     "jshint": "2.5.2",
-    "magicpen-prism": "0.2.0",
+    "magicpen": "4.1.0",
+    "magicpen-prism": "1.0.0",
     "mocha": "2.0.1",
     "passerror": "1.0.1",
-    "unexpected": "5.0.0-beta35",
-    "unexpected-messy": "2.4.0"
+    "unexpected": "5.1.0",
+    "unexpected-messy": "2.4.1"
   },
   "dependencies": {
     "bufferedstream": "1.6.0",
