--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   "homepage": "https://github.com/papandreou/unexpected-express",
   "peerDependencies": {
     "unexpected": "5",
-    "unexpected-messy": ">= 2.5.0",
     "express": "*"
   },
   "devDependencies": {
@@ -43,12 +42,12 @@
     "magicpen-prism": "1.0.0",
     "mocha": "2.0.1",
     "passerror": "1.0.1",
-    "unexpected": "5.1.0",
-    "unexpected-messy": "2.5.0"
+    "unexpected": "5.1.0"
   },
   "dependencies": {
     "bufferedstream": "1.6.0",
     "messy": "3.2.0",
-    "underscore": "1.6.0"
+    "underscore": "1.6.0",
+    "unexpected-messy": "2.5.0"
   }
 }
