--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "bufferedstream": "1.6.0",
     "messy": "4.3.0",
+    "mock-req": "0.1.0",
     "underscore": "1.6.0",
     "unexpected-messy": "2.11.0"
   }
