--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/papandreou/unexpected-express",
   "peerDependencies": {
-    "unexpected": "5",
+    "unexpected": "5 || 6",
     "express": "*"
   },
   "devDependencies": {
@@ -41,13 +41,13 @@
     "magicpen-prism": "1.0.0",
     "mocha": "2.0.1",
     "passerror": "1.0.1",
-    "unexpected": "5.6.2"
+    "unexpected": "6.0.3"
   },
   "dependencies": {
     "bufferedstream": "1.6.0",
     "form-data": "0.2.0",
     "messy": "4.3.0",
     "underscore": "1.6.0",
-    "unexpected-messy": "2.11.0"
+    "unexpected-messy": "2.11.1"
   }
 }
