--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/unexpectedjs/unexpected-express",
   "peerDependencies": {
     "unexpected": "5 || 6",
+    "unexpected-messy": "2",
     "express": "*"
   },
   "devDependencies": {
@@ -41,13 +42,13 @@
     "magicpen-prism": "1.0.0",
     "mocha": "2.0.1",
     "passerror": "1.0.1",
-    "unexpected": "6.3.1"
+    "unexpected": "6.3.1",
+    "unexpected-messy": "2.14.0"
   },
   "dependencies": {
     "bufferedstream": "1.6.0",
     "form-data": "0.2.0",
     "messy": "4.3.0",
-    "underscore": "1.6.0",
-    "unexpected-messy": "2.14.0"
+    "underscore": "1.6.0"
   }
 }
