--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/unexpectedjs/unexpected-express",
   "peerDependencies": {
     "unexpected": "5 || 6",
-    "unexpected-messy": "2",
+    "unexpected-messy": "^2.15.0",
     "express": "*"
   },
   "devDependencies": {
@@ -43,12 +43,12 @@
     "mocha": "2.0.1",
     "passerror": "1.0.1",
     "unexpected": "6.3.1",
-    "unexpected-messy": "2.14.0"
+    "unexpected-messy": "2.15.0"
   },
   "dependencies": {
     "bufferedstream": "1.6.0",
     "form-data": "0.2.0",
-    "messy": "4.3.0",
+    "messy": "4.4.0",
     "underscore": "1.6.0"
   }
 }
