--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "bufferedstream": "1.6.0",
     "form-data": "0.2.0",
     "messy": "6.0.0",
-    "underscore": "1.6.0"
+    "underscore": "1.6.0",
+    "unexpected-messy": "3.0.1"
   }
 }
