--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/unexpectedjs/unexpected-express",
   "peerDependencies": {
     "unexpected": "7",
-    "unexpected-messy": "^3",
+    "unexpected-messy": "^3.0.1",
     "express": "*"
   },
   "devDependencies": {
@@ -43,14 +43,13 @@
     "mocha": "2.0.1",
     "passerror": "1.0.1",
     "unexpected": "7.0.0",
-    "unexpected-messy": "3.0.0",
+    "unexpected-messy": "3.0.1",
     "unexpected-promise": "1.1.1"
   },
   "dependencies": {
     "bufferedstream": "1.6.0",
     "form-data": "0.2.0",
     "messy": "6.0.0",
-    "underscore": "1.6.0",
-    "unexpected-messy": "3.0.1"
+    "underscore": "1.6.0"
   }
 }
