--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/unexpectedjs/unexpected-express",
   "peerDependencies": {
-    "unexpected": "8",
+    "unexpected": "8 || 9",
     "unexpected-messy": "^4.2.0",
     "express": "*"
   },
@@ -41,7 +41,7 @@
     "magicpen": "4.1.0",
     "magicpen-prism": "1.0.0",
     "mocha": "2.2.5",
-    "unexpected": "8.5.0",
+    "unexpected": "9.0.0",
     "unexpected-messy": "4.2.0",
     "unexpected-stream": "1.2.0"
   },
