--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "unexpected"
   ],
   "author": "Andreas Lind Petersen <andreas@one.com>",
-  "license": "BSD",
+  "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/unexpectedjs/unexpected-express/issues"
   },
