--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test",
     "unexpected"
   ],
-  "author": "Andreas Lind Petersen <andreas@one.com>",
+  "author": "Andreas Lind <andreas@one.com>",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/unexpectedjs/unexpected-express/issues"
