Turns out that actually didn't work in npm 2 :(
Revert "Update unexpected-messy to 4.7.0 and list it under both dependencies and peerDependencies."

This reverts commit 6038b20d86ba07e4fcca7138f2a001b610065c96.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "peerDependencies": {
     "express": "*",
     "unexpected": "8 || 9",
-    "unexpected-messy": "^4.7.0"
+    "unexpected-messy": "^4.2.0"
   },
   "devDependencies": {
     "body-parser": "1.0.2",
@@ -42,13 +42,13 @@
     "magicpen-prism": "1.0.0",
     "mocha": "2.2.5",
     "unexpected": "9.4.0",
+    "unexpected-messy": "4.6.0",
     "unexpected-stream": "1.2.0"
   },
   "dependencies": {
     "bufferedstream": "1.6.0",
     "form-data": "0.2.0",
-    "messy": "^6.6.1",
-    "underscore": "1.6.0",
-    "unexpected-messy": "^4.7.0"
+    "messy": "6.6.1",
+    "underscore": "1.6.0"
   }
 }
