--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/unexpectedjs/unexpected-express",
   "peerDependencies": {
     "express": "*",
-    "unexpected": "8 || 9",
+    "unexpected": "^9.5.0",
     "unexpected-messy": "^4.2.0"
   },
   "devDependencies": {
@@ -41,7 +41,7 @@
     "magicpen": "4.1.0",
     "magicpen-prism": "1.0.0",
     "mocha": "2.2.5",
-    "unexpected": "9.4.0",
+    "unexpected": "9.5.0",
     "unexpected-messy": "4.6.0",
     "unexpected-stream": "1.2.0"
   },
