--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "mocha": "2.3.3",
     "sinon": "1.17.3",
     "unexpected": "10.15.0",
-    "unexpected-documentation-site-generator": "4.2.1",
+    "unexpected-documentation-site-generator": "^4.2.3",
     "unexpected-markdown": "1.7.1",
     "unexpected-stream": "2.0.4"
   },
