--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "bufferedstream": "1.6.0",
     "form-data": "0.2.0",
+    "is-stream": "^1.1.0",
     "messy": "^6.6.1",
     "underscore": "1.6.0",
     "unexpected-messy": "^6.0.0"
