Use some ^ dev deps

--- a/package.json
+++ b/package.json
@@ -35,18 +35,18 @@
     "unexpected": "^10.27.0"
   },
   "devDependencies": {
-    "body-parser": "1.0.2",
-    "coveralls": "2.11.1",
+    "body-parser": "^1.0.2",
+    "coveralls": "^2.11.1",
     "eslint": "2.13.1",
     "eslint-config-onelint": "1.2.0",
     "express": "4.1.1",
-    "istanbul": "0.3.0",
-    "magicpen": "4.3.1",
-    "magicpen-prism": "2.3.0",
-    "mocha": "2.3.3",
-    "mock-fs": "4.0.0",
-    "sinon": "1.17.3",
-    "unexpected": "10.27.0",
+    "istanbul": "^0.3.0",
+    "magicpen": "^4.3.1",
+    "magicpen-prism": "^2.3.0",
+    "mocha": "^2.3.3",
+    "mock-fs": "^4.0.0",
+    "sinon": "^1.17.3",
+    "unexpected": "^10.27.0",
     "unexpected-documentation-site-generator": "^4.2.3",
     "unexpected-markdown": "1.7.1",
     "unexpected-stream": "2.0.4"
