--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "body-parser": "^1.0.2",
     "coveralls": "^3.0.0",
     "eslint": "5.0.0",
-    "eslint-config-onelint": "3.0.0",
+    "eslint-config-onelint": "^4.0.0",
     "express": "4.16.3",
     "istanbul": "^0.4.5",
     "magicpen": "^5.12.0",
