--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "mocha": "^5.1.0",
     "mock-fs": "^4.0.0",
     "sinon": "^7.0.0",
-    "unexpected": "^10.27.0",
+    "unexpected": "^11.0.0-3",
     "unexpected-documentation-site-generator": "^5.0.0",
     "unexpected-markdown": "^1.7.1",
     "unexpected-stream": "^3.0.0"
