--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "homepage": "https://github.com/unexpectedjs/unexpected-express",
   "peerDependencies": {
     "express": "*",
-    "unexpected": "^10.27.0"
+    "unexpected": "^10.27.0 || ^11.0.0-3"
   },
   "devDependencies": {
     "body-parser": "^1.0.2",
