--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot && echo google-chrome coverage/lcov-report/index.html",
     "lint": "eslint .",
     "test": "mocha --require unexpected-markdown test/*.js `find documentation -name '*.md'` && npm run lint",
-    "travis": "npm test && npm run coverage && (<coverage/lcov.info coveralls || true)",
+    "ci": "npm test && npm run coverage && (<coverage/lcov.info coveralls || true)",
     "generate-site": "generate-site --require ./bootstrap-unexpected-markdown.js",
     "update-examples": "generate-site --require ./bootstrap-unexpected-markdown.js --update-examples",
     "deploy-site": "deploy-site.sh"
