--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "body-parser": "^1.0.2",
     "coveralls": "^3.0.0",
     "eslint": "^5.12.0",
-    "eslint-config-onelint": "^4.0.0",
+    "eslint-config-pretty-standard": "^2.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "express": "4.16.4",
     "istanbul": "^0.4.5",
     "magicpen": "^5.12.0",
     "magicpen-prism": "^2.3.0",
     "mocha": "^5.1.0",
     "mock-fs": "^4.0.0",
+    "prettier": "^1.15.3",
     "sinon": "^7.0.0",
     "unexpected": "^11.0.0-3",
     "unexpected-documentation-site-generator": "^5.0.0",
