--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 node_js:
-  - "6"
-  - "8"
-  - "9"
-  - "10"
-  - "node"
-script: "npm run ci"
+  - '6'
+  - '8'
+  - '9'
+  - '10'
+  - 'node'
+script: 'npm run ci'
+after_success: '<coverage/lcov.info ./node_modules/coveralls/bin/coveralls.js'
