--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "nyc": "^14.0.0",
     "prettier": "~1.17.0",
     "sinon": "^7.0.0",
-    "unexpected": "^11.0.0-3",
+    "unexpected": "^11.5.0",
     "unexpected-documentation-site-generator": "^6.0.0",
     "unexpected-markdown": "^3.0.0",
     "unexpected-stream": "^3.0.0"
