--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "coveralls": "^3.0.0",
     "eslint": "^6.0.0",
     "eslint-config-pretty-standard": "^2.0.0",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.0.1",
     "express": "^4.17.1",
     "magicpen": "^6.0.2",
