--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/unexpectedExpress.js",
   "scripts": {
     "coverage": "NODE_ENV=development nyc --reporter=lcov --reporter=text --all -- npm test && echo google-chrome coverage/lcov-report/index.html",
-    "lint": "eslint .",
+    "lint": "eslint . && prettier --check '**/*.js'",
     "test": "mocha --require unexpected-markdown test/*.js `find documentation -name '*.md'`",
     "ci": "npm test && npm run lint && npm run coverage",
     "generate-site": "generate-site --require ./bootstrap-unexpected-markdown.js",
@@ -38,9 +38,13 @@
     "body-parser": "^1.0.2",
     "coveralls": "^3.0.0",
     "eslint": "^6.0.0",
-    "eslint-config-pretty-standard": "^2.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-mocha": "^6.0.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "express": "^4.17.1",
     "magicpen": "^6.0.2",
     "magicpen-prism": "^3.0.1",
