--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "homepage": "https://github.com/unexpectedjs/unexpected-express",
   "peerDependencies": {
     "express": "*",
-    "unexpected": "^10.27.0 || ^11.0.0-3"
+    "unexpected": "^10.27.0 || ^11.12.1"
   },
   "devDependencies": {
     "body-parser": "^1.0.2",
@@ -46,14 +46,14 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "express": "^4.17.1",
-    "magicpen": "^6.0.2",
+    "magicpen": "^6.2.1",
     "magicpen-prism": "^4.0.0",
     "mocha": "^6.0.0",
     "mock-fs": "^4.0.0",
     "nyc": "^15.0.0",
     "prettier": "~1.19.1",
     "sinon": "^8.0.1",
-    "unexpected": "^11.5.0",
+    "unexpected": "^11.12.1",
     "unexpected-documentation-site-generator": "^6.0.0",
     "unexpected-markdown": "^4.0.0",
     "unexpected-stream": "^4.0.0"
