--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "bufferedstream": "^3.1.1",
+    "createerror": "^1.1.0",
     "form-data": "^3.0.0",
     "is-stream": "^2.0.0",
     "messy": "^6.6.1",
