--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "createerror": "^1.1.0",
     "form-data": "^3.0.0",
     "is-stream": "^2.0.0",
+    "lodash": "^4.0.0",
     "messy": "^6.6.1",
     "qs": "^6.5.1",
     "unexpected-messy": "^9.0.0"
