--- a/package.json
+++ b/package.json
@@ -39,12 +39,11 @@
     "body-parser": "^1.0.2",
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.1",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-mocha": "^10.0.1",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-n": "^15.1.0",
     "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-standard": "^5.0.0",
     "express": "^4.17.1",
     "magicpen-prism": "^5.0.0",
     "mocha": "^8.2.1",
