--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "homepage": "https://github.com/unexpectedjs/unexpected-express",
   "peerDependencies": {
     "express": "*",
-    "unexpected": "^10.27.0 || ^11.12.1 || ^12.0.0"
+    "unexpected": "^10.27.0 || ^11.12.1 || ^12.0.0 || 13.0.0"
   },
   "devDependencies": {
     "body-parser": "^1.0.2",
@@ -51,7 +51,7 @@
     "nyc": "^15.0.0",
     "offline-github-changelog": "^1.7.0",
     "prettier": "~2.5.0",
-    "unexpected": "^12.0.0",
+    "unexpected": "^13.0.0",
     "unexpected-documentation-site-generator": "^6.0.0",
     "unexpected-markdown": "^5.0.0",
     "unexpected-stream": "^5.0.0"
