--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "homepage": "https://github.com/unexpectedjs/unexpected-express",
   "peerDependencies": {
     "express": "*",
-    "unexpected": "^10.27.0 || ^11.12.1 || ^12.0.0 || 13.0.0"
+    "unexpected": "^10.27.0 || ^11.12.1 || ^12.0.0 || ^13.0.0"
   },
   "devDependencies": {
     "body-parser": "^1.0.2",
